making account login at home

--- a/OnlineEducation/OnlineEducation.csproj
+++ b/OnlineEducation/OnlineEducation.csproj
@@ -24,6 +24,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -196,6 +197,9 @@
     <Compile Include="Areas\HelpOnline\Controllers\Level2Controller.cs" />
     <Compile Include="Areas\HelpOnline\Controllers\Level3Controller.cs" />
     <Compile Include="Areas\HelpOnline\HelpOnlineAreaRegistration.cs" />
+    <Compile Include="Controllers\AdminAccountController.cs" />
+    <Compile Include="Models\Account.cs" />
+    <Compile Include="Models\AccountDB.cs" />
     <Compile Include="Areas\HelpOnline\Models\HelpLevel1.cs" />
     <Compile Include="Areas\HelpOnline\Models\HelpLevel1DB.cs" />
     <Compile Include="Areas\HelpOnline\Models\HelpLevel2.cs" />
@@ -207,6 +211,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\OnlineEducationContext.cs" />
+    <Compile Include="Models\Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -223,6 +228,15 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\AdminAccount\Login.cshtml" />
+    <Content Include="Views\AdminAccount\ResetPassword.cshtml" />
+    <Content Include="Views\AdminAccount\Index.cshtml" />
+    <Content Include="Views\AdminAccount\Create.cshtml" />
+    <Content Include="Views\AdminAccount\ResetPasswordSuccess.cshtml" />
+    <Content Include="Views\AdminAccount\Details.cshtml" />
+    <Content Include="Views\AdminAccount\Edit.cshtml" />
+    <Content Include="Views\AdminAccount\ChangePassword.cshtml" />
+    <Content Include="Views\AdminAccount\ChangePasswordSuccess.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
