--- a/OnlineEducation/Web.config
+++ b/OnlineEducation/Web.config
@@ -11,7 +11,8 @@
   <connectionStrings>
     <add name="OnlineEducationContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=OnlineEducationContext-20181126113612; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|OnlineEducationContext-20181126113612.mdf"
       providerName="System.Data.SqlClient" />
-    <add name="ConStringSqlServer" connectionString="Server=KATE-PC\SQLEXPRESS;Database=OnlineEducation;Integrated Security=False;User Id=sa; Password=amwin2015!" providerName="System.Data.SqlClient" />
+    <add name="ConStringSqlServer_1" connectionString="Server=KATE-PC\SQLEXPRESS;Database=OnlineEducation;Integrated Security=False;User Id=sa; Password=amwin2015!" providerName="System.Data.SqlClient" />
+    <add name="ConStringSqlServer" connectionString="Server=MYDESKTOP02\SQLEXPRESS;Database=OnlineEducation;Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   
   <appSettings>
